<resources>
    <string name="app_name">Music4LL</string>
    <string name="title_activity_reproductor">ActivityReproductor</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="stringGenero">Seleccione un género</string>
    <string name="stringGrupos">Seleccione un grupo</string>
    <string name="stringCanciones">Seleccione una canción</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="campoUsuario">Usuario</string>
    <string name="campoContrasena">Contraseña</string>
    <string name="muteUnmute">Silenciar</string>
    <string name="txtGrupos">Grupo:</string>
    <string name="txtGeneros">Genero:</string>
    <string name="txtTemas">Canción:</string>
    <string name="txtErrorLogin">Credenciales erróneas</string>
</resources>
